--- a/Figma.html
+++ b/Figma.html
@@ -23,6 +23,7 @@
             <a href="#">Services</a>
             <a href="#">Work</a>
             <a href="#">About</a>
+            <a href="#">Internet</a>
         </div>
     </nav>
 
